# Whereabouts

./: .gitignore  CONTRIBUTING.md  LICENSE  Publish App Update.command  README.md  SPEC.md  Start Placement Tool.command
.github/workflows/: ci.yml
app/: app.json  package-lock.json  package.json
app/app/: _layout.tsx  index.tsx
app/lib/: data.ts  navigate.ts  search.ts
data/control_points/: eryholme.json
data/fixtures/: brompton-by-sawdon-south.json  name_overrides.json  stapleton.json  west-witton.json
data/placements/: aldborough-st-john-north.json  aldborough-st-john-s.json  angram.json  appersett.json  arkle-town.json  arrathorne.json  askrigg-central.json  askrigg-lodge-yard.json  askrigg-north.json  askrigg-west.json  aysgarth-east.json  aysgarth-west.json  bainbridge-north.json  bainbridge-south.json  barton-north.json  barton-south.json  bellerby-east.json  bellerby-west.json  blades.json  bolton-on-swale.json  booze.json  breconbar.json  brompton-on-swale-n.json  brompton-on-swale-s.json  burtersett.json  caldbergh.json  caldwell.json  carlton-wensleydale.json  carlton.json  carperby.json  castle-bolton.json  catterick-village-c.json  catterick-village-ne.json  catterick-village-nw.json  catterick-village-s.json  (+108 more)
docs/: _headers  houses.json  how-it-works.html  index.html  manifest.json  privacy.html  sw.js
etl/: make_icons.py  pyproject.toml
etl/src/etl/: __init__.py  coverage.py  discover.py  emit.py  geocode.py  georef_tool.py  main.py  models.py  parse.py  place_tool.py  pwa.py  render.py  slugs.py  transform.py
functions/: _middleware.js
(+1 files in other folders)
