[project]
name = "etl"
version = "0.1.0"
description = "PDF discovery, parsing, rendering and georeferencing ETL for Whereabouts"
readme = "README.md"
authors = [
    { name = "Adam-Dent", email = "96430780+Adam-Dent@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "requests>=2.32",
    "numpy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "pillow>=10.0",
]

[project.optional-dependencies]
pyproj = ["pyproj>=3.6"]

[project.scripts]
whereabouts-etl = "etl.main:main"
whereabouts-georef = "etl.georef_tool:main"
whereabouts-build-pwa = "etl.pwa:main"

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
